--- a/kwitter.css
+++ b/kwitter.css
@@ -6,7 +6,7 @@ html, body
 
 body
 {
-background-image: linear-gradient(to right top, #33a0f1, #2591d9, #1882c1, #0a73aa, #006494);
+background-image: linear-gradient(to right top, #f133c2, #c425d9, #c1185e, #aa0a87, #940063);
 }
 
 .header
@@ -91,4 +91,4 @@ background-image: linear-gradient(to right top, #33a0f1, #2591d9, #1882c1, #0a73
 .message_h4
 {
 	padding-left:5px;color:grey;
-}
+}	
